# cv-project

./: CMakeLists.txt  README.md
include/: car_segmenter.hpp  occupancy_classifier.hpp  parking_space.hpp  performance_evaluator.hpp  space_detector.hpp  visualizer.hpp
src/: car_segmenter.cpp  main.cpp  occupancy_classifier.cpp  parking_space.cpp  performance_evaluator.cpp  space_detector.cpp  visualizer.cpp
